swagger endpoint work
