# models/common_stack.go
@@ -1,193 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// CommonStack common stack
-//
-// swagger:model commonStack
-type CommonStack struct {
-
-	// exception message
-	ExceptionMessage string `json:"exception message,omitempty"`
-
-	// name
-	Name string `json:"name,omitempty"`
-
-	// status
-	Status string `json:"status,omitempty"`
-
-	// versions
-	Versions []*CommonStackVersionsItems0 `json:"versions"`
-}
-
-// Validate validates this common stack
-func (m *CommonStack) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateVersions(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *CommonStack) validateVersions(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Versions) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Versions); i++ {
-		if swag.IsZero(m.Versions[i]) { // not required
-			continue
-		}
-
-		if m.Versions[i] != nil {
-			if err := m.Versions[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("versions" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CommonStack) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CommonStack) UnmarshalBinary(b []byte) error {
-	var res CommonStack
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
-
-// CommonStackVersionsItems0 common stack versions items0
-//
-// swagger:model CommonStackVersionsItems0
-type CommonStackVersionsItems0 struct {
-
-	// images
-	Images []*CommonStackVersionsItems0ImagesItems0 `json:"images"`
-
-	// reponame
-	Reponame string `json:"reponame,omitempty"`
-
-	// version
-	Version string `json:"version,omitempty"`
-}
-
-// Validate validates this common stack versions items0
-func (m *CommonStackVersionsItems0) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateImages(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *CommonStackVersionsItems0) validateImages(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Images) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Images); i++ {
-		if swag.IsZero(m.Images[i]) { // not required
-			continue
-		}
-
-		if m.Images[i] != nil {
-			if err := m.Images[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("images" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CommonStackVersionsItems0) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CommonStackVersionsItems0) UnmarshalBinary(b []byte) error {
-	var res CommonStackVersionsItems0
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
-
-// CommonStackVersionsItems0ImagesItems0 common stack versions items0 images items0
-//
-// swagger:model CommonStackVersionsItems0ImagesItems0
-type CommonStackVersionsItems0ImagesItems0 struct {
-
-	// image
-	Image string `json:"image,omitempty"`
-}
-
-// Validate validates this common stack versions items0 images items0
-func (m *CommonStackVersionsItems0ImagesItems0) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CommonStackVersionsItems0ImagesItems0) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CommonStackVersionsItems0ImagesItems0) UnmarshalBinary(b []byte) error {
-	var res CommonStackVersionsItems0ImagesItems0
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
